# revive-contract

./: .gitignore  Cargo.toml  README.md
docs/: token-erc20-design.md
evms/: .env.example  .gitignore  README.md  README.zh-CN.md  hardhat.config.polkadot.js  package-lock.json  package.json
evms/contracts/: BLS.sol  ERC20.sol  Subnet.sol  Token.sol
evms/hack/: deploy_erc20.js  deploy_subnet_token.js  generate-go-binding.sh  init_chain.sh  init_subnet_data.js  set_epoch_slot.js  transfer_erc20.js  transfer_erc20.sh  upgrade_subnet_token.js
evms/hack/configs/: local.json  main.json  test.json
evms/lib/: List2D.sol  Types.sol
hacks/deploy/: const.go  contract_test.go  deploy_contract.sh  gen-contract.sh  go.mod  go.sum  init_chain.sh  subnet_test.go  subnet_update.sh  token_sol_test.go  token_test.go  token_update.sh  upgrade_contract.sh
hacks/deploy/cmd/deploy-full/: main.go
hacks/deploy/cmd/upgrade-contract/: main.go
hacks/deploy/configs/: local.json  main.json  test.json
hacks/deploy/contracts/proxy/: calls.go
hacks/deploy/contracts/subnet/: calls.go  types.go
hacks/deploy/contracts/token/: calls.go  types.go
hacks/deploy/evm/: gen.sh  sol_test.go
hacks/deploy/evm/binds/: token.go
hacks/deploy/tokensol/: token.go
primitives/src/: types.rs
revives/Proxy/: Cargo.toml
revives/Subnet/: Cargo.toml
revives/Subnet/src/: contract.rs  datas.rs  errors.rs  tests.rs
revives/Token/: Cargo.toml
revives/Token/src/: contract.rs  errors.rs  tests.rs
