[package]
name = "token"
version = "0.1.0"
edition = "2024"
description = "Token 积分充值/提现合约 PolkaVM/wrevive 版本"

[features]
default = []
api = []

[[bin]]
name = "token"
path = "src/contract.rs"

[lib]
name = "token"
path = "src/contract.rs"
doctest = false

[dependencies]
pvm-bump-allocator = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
polkavm-derive = "0.31"
alloy-core = { version = "1.5", default-features = false, features = ["sol-types"] }
pallet-revive-uapi = { version = "0.11", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
pvm-contract-types = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
wrevive-macro = { workspace = true }
wrevive-api = { workspace = true, features = ["on_chain"] }
primitives = { workspace = true }

[dev-dependencies]
wrevive-api = { workspace = true, features = ["off_chain"] }
